// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserMisery renders 1`] = `
<Tooltip
  containerDisplayMode="block"
  position="top"
  title={
    <React.Fragment>
      <span>
        <span>
          75
        </span>
        <span>
           out of 
        </span>
        <span>
          100
        </span>
        <span>
           (
        </span>
        <span>
          75.00
        </span>
        <span>
          %) unique users waited more than 
        </span>
        <span>
          1200
        </span>
        <span>
          ms
        </span>
      </span>
    </React.Fragment>
  }
>
  <StyledScoreBar
    palette={
      Array [
        "#392C94",
        "#392C94",
        "#392C94",
        "#392C94",
        "#392C94",
        "#392C94",
        "#392C94",
        "#392C94",
        "#392C94",
        "#392C94",
      ]
    }
    radius={0}
    score={7}
    size={20}
    thickness={4}
  />
</Tooltip>
`;

exports[`UserMisery renders no bars when miserable users is zero 1`] = `
<Tooltip
  containerDisplayMode="block"
  position="top"
  title={
    <React.Fragment>
      <span>
        <span>
          0
        </span>
        <span>
           out of 
        </span>
        <span>
          100
        </span>
        <span>
           (
        </span>
        <span>
          0.00
        </span>
        <span>
          %) unique users waited more than 
        </span>
        <span>
          1200
        </span>
        <span>
          ms
        </span>
      </span>
    </React.Fragment>
  }
>
  <StyledScoreBar
    palette={
      Array [
        "#392C94",
        "#392C94",
        "#392C94",
        "#392C94",
        "#392C94",
        "#392C94",
        "#392C94",
        "#392C94",
        "#392C94",
        "#392C94",
      ]
    }
    radius={0}
    score={0}
    size={20}
    thickness={4}
  />
</Tooltip>
`;

exports[`UserMisery renders one bar when miserable users are close to zero 1`] = `
<Tooltip
  containerDisplayMode="block"
  position="top"
  title={
    <React.Fragment>
      <span>
        <span>
          1
        </span>
        <span>
           out of 
        </span>
        <span>
          100
        </span>
        <span>
           (
        </span>
        <span>
          1.00
        </span>
        <span>
          %) unique users waited more than 
        </span>
        <span>
          1200
        </span>
        <span>
          ms
        </span>
      </span>
    </React.Fragment>
  }
>
  <StyledScoreBar
    palette={
      Array [
        "#392C94",
        "#392C94",
        "#392C94",
        "#392C94",
        "#392C94",
        "#392C94",
        "#392C94",
        "#392C94",
        "#392C94",
        "#392C94",
      ]
    }
    radius={0}
    score={1}
    size={20}
    thickness={4}
  />
</Tooltip>
`;
